--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 alembic==1.7.3
+blinker==1.4
 certifi==2021.5.30
 charset-normalizer==2.0.6
 click==8.0.1
 colorama==0.4.4
 Flask==2.0.1
+Flask-Mail==0.9.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
 greenlet==1.1.2
